# AstroImageCompressor

./: Cargo.toml  readme.md
benches/: benchmarks.rs
src/: image_stats.rs  lib.rs  main.rs
